Prevent long code text causing page overflow

--- a/src/partials/core/styles/reset.css
+++ b/src/partials/core/styles/reset.css
@@ -8,7 +8,7 @@ body {
     min-width: 20em;
 }
 
-img {
+img, video {
     display: block;
     max-width: 100%;
 }
