--- a/src/views/writing.css
+++ b/src/views/writing.css
@@ -39,6 +39,7 @@
     display: block;
     margin-bottom: 1em;
     padding: 0.75em 1em;
+    overflow: scroll;
     background: var(--black);
     color: var(--white);
 }
